--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,10 +14,12 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.8",
     "aos": "^2.3.4",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
